# cpp_project_template

./: .clang-format  CMakeLists.txt
src/: main.cpp
